--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 h1,
 .recipe-link {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, "Geneva", Tahoma, sans-serif;
 }
 
 h1 {
